--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
+    "axios": "^1.6.7",
     "dotenv": "^16.3.1",
     "react-toastify": "^9.1.3"
   },
